--- a/index.html
+++ b/index.html
@@ -351,6 +351,17 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script type="text/javascript">
+				(function(w,d,s,r,k,h,m){
+					if(w.performance && w.performance.timing && w.performance.navigation) {
+						w[r] = w[r] || function(){(w[r].q = w[r].q || []).push(arguments)};
+						h=d.createElement('script');h.async=true;h.setAttribute('src',s+k);
+						d.getElementsByTagName('head')[0].appendChild(h);
+						(m = window.onerror),(window.onerror = function (b, c, d, f, g) {
+						m && m(b, c, d, f, g),g || (g = new Error(b)),(w[r].q = w[r].q || []).push(["captureException",g]);})
+					}
+					})(window,document,'//static.site24x7rum.com/beacon/site24x7rum-min.js?appKey=','s247r','95f4964218f35a84f8d2ff96409963f6');
+			</script>
 
 	</body>
 </html>
